--- a/Gitea/Base.lproj/Main.storyboard
+++ b/Gitea/Base.lproj/Main.storyboard
@@ -179,7 +179,7 @@
         <!--Login View Controller-->
         <scene sceneID="Jsx-IP-Bxv">
             <objects>
-                <viewController id="4gt-uQ-YHE" customClass="LoginViewController" customModule="Gitea" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="4gt-uQ-YHE" customClass="LoginViewController" customModule="Gitea" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kpz-hO-KSh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
