--- a/Gitea/Base.lproj/Main.storyboard
+++ b/Gitea/Base.lproj/Main.storyboard
@@ -100,6 +100,12 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="gLE-yR-Bmj"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="RCs-hC-Pnd">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refreshAction:" destination="QkG-YT-odX" eventType="valueChanged" id="2rS-0f-cvA"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1bD-DX-vXp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -129,6 +135,12 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="ISG-Sj-Zx6"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="Nsi-vK-INg">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refreshAction:" destination="y6o-ps-v6J" eventType="valueChanged" id="WHN-xn-gxS"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1bm-fL-nIn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -158,6 +170,12 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="WsM-Td-fcP"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="aax-bQ-BVf">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refreshAction:" destination="uEu-xx-OTi" eventType="valueChanged" id="01o-0l-ape"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IIJ-Bj-hNV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -187,6 +205,12 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="hPN-G7-XDw"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="tXl-ma-8WO">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refreshAction:" destination="RQs-5x-SkA" eventType="valueChanged" id="XtQ-Ok-uaI"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qt0-sP-lZe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
