--- a/Gitea/Base.lproj/Main.storyboard
+++ b/Gitea/Base.lproj/Main.storyboard
@@ -130,7 +130,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iMb-Fg-bAb">
-                                            <rect key="frame" x="8" y="14" width="32" height="32"/>
+                                            <rect key="frame" x="8" y="15" width="32" height="32"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7um-Aq-8Va">
@@ -148,22 +148,11 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M9E-pJ-Af6">
-                                            <rect key="frame" x="326" y="0.0" width="32" height="32"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tot-i4-ptY">
-                                            <rect key="frame" x="366" y="37" width="42" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rBM-kJ-HSu">
-                                            <rect key="frame" x="326" y="31" width="32" height="32"/>
+                                            <rect key="frame" x="326" y="15" width="32" height="32"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lJ2-og-TC5">
-                                            <rect key="frame" x="366" y="5" width="42" height="21"/>
+                                            <rect key="frame" x="366" y="21" width="42" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -172,11 +161,9 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="commentsImage" destination="M9E-pJ-Af6" id="JPK-AL-Nbs"/>
+                                    <outlet property="commentsLabel" destination="lJ2-og-TC5" id="ao9-t4-6wR"/>
                                     <outlet property="detailLabel" destination="Wq4-Po-ZdB" id="mO2-HA-Dob"/>
-                                    <outlet property="info1Image" destination="M9E-pJ-Af6" id="JPK-AL-Nbs"/>
-                                    <outlet property="info1Label" destination="lJ2-og-TC5" id="Yes-uK-ice"/>
-                                    <outlet property="info2Image" destination="rBM-kJ-HSu" id="jqi-8H-Uas"/>
-                                    <outlet property="info2Label" destination="tot-i4-ptY" id="gTh-wT-8cW"/>
                                     <outlet property="titleLabel" destination="7um-Aq-8Va" id="ItR-bn-NPg"/>
                                     <outlet property="typeImage" destination="iMb-Fg-bAb" id="ajx-fq-Vbp"/>
                                 </connections>
